# fabricat

./: .gitignore  AGENTS.md  PLAN.md  README.RU.md  README.md
backend/: .env.example  .gitignore  AGENTS.md  PLAN.md  REPORT.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users_table.py
backend/docs/: domain_overview.md  websocket_api.md
backend/src/fabricat_backend/: __init__.py  __main__.py  main.py  settings.py
backend/src/fabricat_backend/api/: __init__.py  app.py  dependencies.py
backend/src/fabricat_backend/api/models/: __init__.py  auth.py  session.py
backend/src/fabricat_backend/api/routers/: __init__.py  auth.py  session.py
backend/src/fabricat_backend/api/services/: __init__.py  auth.py  game_session.py
backend/src/fabricat_backend/database/: __init__.py  base.py  config.py  dependencies.py  service.py
backend/src/fabricat_backend/database/repositories/: __init__.py  user.py
backend/src/fabricat_backend/database/schemas/: __init__.py  user.py
backend/src/fabricat_backend/game_logic/: __init__.py  configuration.py  engine.py  handlers.py  orchestration.py  persistence.py  phases.py  session.py  state.py
backend/src/fabricat_backend/shared/: __init__.py  enums.py  events.py  rng.py  value_objects.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_game_session_e2e.py  test_game_session_websocket.py
backend/tests/database/: test_user_schema.py
backend/tests/game_logic/: test_month_engine_integration.py  test_phase_handlers.py  test_phases.py  test_session.py
frontend/: .gitignore  AGENTS.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js
frontend/src/components/: home-page.jsx
frontend/src/components/auth/: AuthPanel.jsx
frontend/src/components/game/: GameConsole.jsx
frontend/src/lib/: apiClient.js  storage.js
