[project]
name = "fabricat-backend"
version = "0.1.0"
description = "Backend for Fabricat game"
authors = [
    { name = "Mikhail Polevoda", email = "mihail.polevoda@gmail.com" },
    { name = "Yulia Yanaeva", email = "anaevaulia5@gmail.com" },
    { name = "Vika Kuzina", email = "kuzina2004@internet.ru" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<0.31",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pyjwt>=2.8,<3.0",
    "pydantic[email]>=2.6,<3.0",
    "httpx>=0.27,<0.28",
    "pytest>=8.2,<9.0",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
serve = "fabricat_backend.main:run_prod"
dev = "fabricat_backend:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
