[project]
name = "fabricat-backend"
version = "0.1.0"
description = "Backend for Fabricat game"
authors = [
    { name = "Mikhail Polevoda", email = "mihail.polevoda@gmail.com" },
    { name = "Yulia Yanaeva", email = "anaevaulia5@gmail.com" },
    { name = "Vika Kuzina", email = "kuzina2004@internet.ru" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<0.31",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pyjwt>=2.8,<3.0",
    "pydantic[email]>=2.6,<3.0",
    "httpx>=0.27,<0.28",
    "pytest>=8.2,<9.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]

[project.scripts]
serve = "fabricat_backend.main:run_prod"
dev = "fabricat_backend:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".vscode",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "TD002", "FIX002"]

exclude = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["ALL"]
"tests/*" = ["D", "S101", "PLR2004", "ANN201", "ANN401", "SLF001", "INP001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["./.venv"]
pythonVersion = "3.12"

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "integration: integration tests"
]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
